[tool.poetry]
name = "notion2medium"
version = "0.1.0"
description = "Simple command that creates Medium post from a Notion page"
authors = ["echo724 <eunchan1001@gmail.com>"]

packages = [
    { include = "notion2medium" },
    { include = "medium_sdk_python" },
]

exclude = ["tests"]

[tool.poetry.scripts]
notion2medium = "notion2medium.console.application:main"

[tool.poetry.dependencies]
python = "^3.9"
notion2md = "^2.4.0"
cleo = "^0.8.1"
clikit = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
