[tool.poetry]
name = "notion2medium"
version = "1.0.0"
description = "a Simple command that publishes Notion Page to Medium."
authors = ["echo724 <eunchan1001@gmail.com>"]
readme = "README.md"

packages = [
    { include = "notion2medium" },
    { include = "medium_sdk_python" },
]

exclude = ["tests"]

[tool.poetry.scripts]
notion2medium = "notion2medium.console.application:main"

[tool.poetry.dependencies]
python = "^3.9"
cleo = "1.0.0a4"
notion-client = "^0.9.0"
requests = "^2.27.1"
notion2md = "^2.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^22.1.0"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["notion2medium", "tests"]
filter_files = true
known_first_party = "notion2medium"

[tool.black]
extend-exclude = 'medium_sdk_python/'
line-length = 79

[tool.semantic_release]
version_variable = [
    "notion2medium/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"